trying to fix project overflow

--- a/src/info.css
+++ b/src/info.css
@@ -6,9 +6,7 @@
     "sidenav content content";
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 2fr 8fr 1fr;
-  min-height: 100vh;
-  
-  overflow: auto;
+  height: 100vh;
   gap: 3px;
   background-color: black;
   padding: 5px;
@@ -42,7 +40,7 @@
   grid-area: content;
   font-family: 'Inter';
   background-color: #D8D8E9;
-  
+  overflow: auto;
 }
 
 h3 {
